fix: better readability of help message

--- a/public/main.css
+++ b/public/main.css
@@ -464,6 +464,10 @@ body {
     font-size: 30px;
     margin-left: 220px;
     margin-bottom: 50px;
+    font-weight: bolder;
+    -webkit-text-fill-color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 
 #help-footer img {
